; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/sti/hva/extr_hva-v4l2.c_register_formats.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/sti/hva/extr_hva-v4l2.c_register_formats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hva_dev = type { i32, i32, i32, %struct.TYPE_2__**, i32, i32 }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hva_dev*)* @register_formats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @register_formats(%struct.hva_dev* %0) #0 {
  %2 = alloca %struct.hva_dev*, align 8
  %3 = alloca i32, align 4
  store %struct.hva_dev* %0, %struct.hva_dev** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %41, %1
  %5 = load i32, i32* %3, align 4
  %6 = load %struct.hva_dev*, %struct.hva_dev** %2, align 8
  %7 = getelementptr inbounds %struct.hva_dev, %struct.hva_dev* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = icmp ult i32 %5, %8
  br i1 %9, label %10, label %44

10:                                               ; preds = %4
  %11 = load %struct.hva_dev*, %struct.hva_dev** %2, align 8
  %12 = getelementptr inbounds %struct.hva_dev, %struct.hva_dev* %11, i32 0, i32 3
  %13 = load %struct.TYPE_2__**, %struct.TYPE_2__*** %12, align 8
  %14 = load i32, i32* %3, align 4
  %15 = zext i32 %14 to i64
  %16 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %13, i64 %15
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.hva_dev*, %struct.hva_dev** %2, align 8
  %21 = getelementptr inbounds %struct.hva_dev, %struct.hva_dev* %20, i32 0, i32 5
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.hva_dev*, %struct.hva_dev** %2, align 8
  %24 = getelementptr inbounds %struct.hva_dev, %struct.hva_dev* %23, i32 0, i32 4
  %25 = call i32 @register_format(i32 %19, i32 %22, i32* %24)
  %26 = load %struct.hva_dev*, %struct.hva_dev** %2, align 8
  %27 = getelementptr inbounds %struct.hva_dev, %struct.hva_dev* %26, i32 0, i32 3
  %28 = load %struct.TYPE_2__**, %struct.TYPE_2__*** %27, align 8
  %29 = load i32, i32* %3, align 4
  %30 = zext i32 %29 to i64
  %31 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %28, i64 %30
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = load %struct.hva_dev*, %struct.hva_dev** %2, align 8
  %36 = getelementptr inbounds %struct.hva_dev, %struct.hva_dev* %35, i32 0, i32 2
  %37 = load i32, i32* %36, align 8
  %38 = load %struct.hva_dev*, %struct.hva_dev** %2, align 8
  %39 = getelementptr inbounds %struct.hva_dev, %struct.hva_dev* %38, i32 0, i32 1
  %40 = call i32 @register_format(i32 %34, i32 %37, i32* %39)
  br label %41

41:                                               ; preds = %10
  %42 = load i32, i32* %3, align 4
  %43 = add i32 %42, 1
  store i32 %43, i32* %3, align 4
  br label %4

44:                                               ; preds = %4
  ret void
}

declare dso_local i32 @register_format(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
